--- a/src/app/components/Table/Table.component.html
+++ b/src/app/components/Table/Table.component.html
@@ -1,6 +1,4 @@
 <div class="container" *ngIf="items.length > 0" >
-    <button type="submit" class="button-send" (click)="openFormModal()">Agregar item</button>
+    <button type="submit" class="button-send" (click)="openFormModal()">Agregar Cliente</button>
     <tots-table #tableComp [config]="config" (onAction)="onTableAction($event)" [pageIndex]="1" [pageSize]="5" [hasPagination]="hasPagination"></tots-table>
 </div>
-
-<!-- <button (click)="openFormModal()">Prueba de Modal</button> -->
