--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -9,14 +9,23 @@
     border-radius: 0px;
   }
 
-  .alert{
+  .alert {
     color: var(--input-error-border-color, #E24C4C);
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
     line-height: 21px;
-    margin-right: 35%;
+    text-align: center;
   }
+
+  .success {
+    color: #2E7D32;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px;
+    text-align: center;
+}
 
   .button-send {
     border-radius: 4px;
