--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -29,7 +29,7 @@
       </ng-container>
 
     <div class="container">
-      <button type="submit" class="button-send" (click)="doLogin(this.loginForm.value)">LOGIN</button>
+      <button type="submit" class="button-send" (click)="doLogin()">LOGIN</button>
       <button class="button-forgot" (click)="openDialog()" >Register</button>
     </div>
   </div>
