--- a/src/app/components/Table/Table.component.scss
+++ b/src/app/components/Table/Table.component.scss
@@ -4,12 +4,11 @@
   padding: 4em;
   background-color: white;
   border-radius: 25px;
-
 }
 
 .button-send {
   border-radius: 4px;
-    background-color: #9280B4;
+    background-color: #ff4081;
     padding: 6px;
     border: none;
     cursor: pointer;
