--- a/src/app/components/register-form/register-form.component.scss
+++ b/src/app/components/register-form/register-form.component.scss
@@ -1,11 +1,11 @@
-.container{
+.container {
   width: 500px;
   margin: auto;
   padding: 25px;
   background-color: white;
 }
 
-.alert{
+.alert {
   color: var(--input-error-border-color, #E24C4C);
   font-size: 12px;
   font-style: normal;
@@ -15,7 +15,7 @@
 }
 
 .title {
-  color:  #9280B4;
+  color:  #ff4081;
   font-size: 18px;
   font-style: normal;
   font-weight: 600;
