--- a/src/app/components/remove-client-pop-up/remove-client-pop-up.component.html
+++ b/src/app/components/remove-client-pop-up/remove-client-pop-up.component.html
@@ -1,6 +1,5 @@
-<div class="cointaner">
-    <h1 class="title text-5xl">Are u sure that u want to delete this client ?</h1>
-    <button type="submit" class="button-cancel" (click)="cancel()">Cancel</button>
-    <button type="submit" class="button-confirm" (click)="confirm()" >Delete</button>
-
-</div>
+    <div class="cointaner">
+        <h1 class="title text-5xl">Are u sure that u want to delete this client ?</h1>
+        <button mat-flat-button type="submit" class="button-cancel" (click)="cancel()">Cancel</button>
+        <button mat-flat-button type="submit" class="button-confirm" (click)="confirm()">Delete</button>
+    </div>
