--- a/src/app/components/remove-client-pop-up/remove-client-pop-up.component.scss
+++ b/src/app/components/remove-client-pop-up/remove-client-pop-up.component.scss
@@ -20,7 +20,7 @@
 }
 
 .title {
-  color:  #9280B4;
+  color:  #ff4081;
   font-size: 18px;
   font-style: normal;
   font-weight: 600;
@@ -29,7 +29,7 @@
 
 .button-confirm {
   border-radius: 4px;
-  background-color: #9280B4;
+  background-color: #ff4081;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
@@ -46,7 +46,7 @@
 
 .button-cancel {
   border-radius: 4px;
-  color: #9280B4;
+  color: #ff4081;
   border-radius: 4px;
   background: var(--primary-light-primary-50, #F5F6FB);
   padding: 14px 20px;
