--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,35 +1,41 @@
 <div class="form-login">
-    <div class="container">
-      <h1 class="title text-5xl">Welcome to Tots Test!</h1>
-      <h3 class="subtitle fs-large">Enter your login credentials to get started</h3>
-      <h3 class="subtitle fs-large">Or do a quick sign up if you need!</h3>
-    </div>
-    <form [formGroup]="loginForm">
-      <div class="container">
-        <div class="input-notificacion-type">
-          <input formControlName="email" type="text" placeholder="Email">
-        </div>
-        <div class="input-notificacion-type">
-          <input formControlName="password" type="password" placeholder="Password">
-        </div>  
-      </div>
-    </form>
-
-      <ng-container *ngIf="{user: $loginData | async} as data">
-        <ng-container class="success" *ngIf="succesLogin else loading">
-          <div class="success">
-            {{this.succesLogin}}
-          </div>
-        </ng-container>
-        <ng-template #loading>
-          <div  class="alert">
-            {{this.errorLogin}}
-          </div>
-        </ng-template>
-      </ng-container>
-
-    <div class="container">
-      <button type="submit" class="button-send" (click)="doLogin()">LOGIN</button>
-      <button class="button-forgot" (click)="openDialog()" >Register</button>
-    </div>
+  <div class="container">
+    <h1 class="title text-5xl">Welcome to Tots Test!</h1>
+    <h3 class="subtitle fs-large">Enter your login credentials to get started</h3>
+    <h3 class="subtitle fs-large">Or do a quick sign up if needed!</h3>
   </div>
+  <form [formGroup]="loginForm">
+    <div class="container">
+      <div class="input-notificacion-type">
+        <input formControlName="email" type="text" placeholder="Email">
+      </div>
+      <div class="input-notificacion-type">
+        <input formControlName="password" type="password" placeholder="Password">
+      </div>
+    </div>
+  </form>
+
+  <ng-container *ngIf="{user: $loginData | async} as data">
+    <ng-container class="success" *ngIf="succesLogin else loading">
+      <div class="success">
+        {{this.succesLogin}}
+      </div>
+    </ng-container>
+    <ng-template #loading>
+      <div class="alert">
+        {{this.errorLogin}}
+      </div>
+    </ng-template>
+  </ng-container>
+
+  <div class="alert" *ngIf="loginForm.controls['email'].errors?.['pattern']">
+    Please use a correct email account
+</div>
+
+  <div class="container">
+    <button mat-flat-button color="accent" class="button-send" (click)="doLogin()">Login</button>
+    <button mat-flat-button class="button-forgot" (click)="openDialog()">Register</button>
+  </div>
+
+
+</div>
